--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang='en'><head><title></title><meta http-equiv='refresh' content='0; url=http://Error: queryA ETIMEOUT d1p26.ip.zn2.us/101?1591190692889'></head><body></body></html>
+<!DOCTYPE html><html lang='en'><head><title></title><meta http-equiv='refresh' content='0; url=http://61.228.180.132/101?1591192150219'></head><body></body></html>
